# RAG

./: dir_configs.py  pyproject.toml  readme.md
src/: query_with_llm.py  simple_query.py
src/components/: prompts.py  query_engine.py  set_index.py
src/dto/: configs.py
src/excel_agentic_rag/: fin_agents.py  rag_agent_improved_prompts.py  rag_with_fin_agents.py  rag_with_fin_agents_recursive_qe.py  rag_with_fin_agents_recursive_qe_openai.py  simple_rag.py  simple_rag_with_recursive_qe.py
src/learn_llama_index/: budget_agent_starter.py  budget_agent_with_llamaparse.py  first_query_ollama.py  packaged_agent_starter.py  prompt_learning.py  set_index.py  set_llm.py  simple_hybrid_search.py  simple_rag.py
src/podcast_chatbot/: data.py  main.py
tests/: test_key.py  test_model_name.py  test_set_index.py
tests/test_components/: test_prompts.py
tests/test_dto/: test_query_config.py
