[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["motiram <moti@playai.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.45.2"
faiss-cpu = "^1.9.0"
datasets = "^3.0.1"
torch = "^2.5.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
