[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["motiram <moti@playai.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
transformers = "^4.45.2"
faiss-cpu = "^1.9.0"
datasets = "^3.0.1"
torch = "^2.5.0"
pytest = "^8.3.3"
feedparser = "^6.0.11"
unstructured = "^0.16.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
llama-index = "^0.11.19"
llama-index-llms-ollama = "^0.3.4"
llama-index-embeddings-ollama = "^0.3.1"
sqlite-utils = "^3.37"
llama-index-readers-file = "^0.2.2"
llama-index-embeddings-openai = "^0.2.5"
llama-index-agent-openai = "^0.3.4"
llama-index-llms-openai = "^0.2.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
